...
                              android:src="@drawable/circle"
                              app:layout_constraintBottom_toBottomOf="parent"
                              app:layout_constraintLeft_toLeftOf="parent"
                              app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                              android:id="@+id/recyclerview_row_textview_roomletter"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="A"
                              android:textStyle="bold"
                              android:textSize="20sp"
                              android:textColor="@color/white"
...
                              app:layout_constraintBottom_toBottomOf="parent"
                              app:layout_constraintEnd_toStartOf="@+id/recyclerview_row_imageview_delete"
                              app:layout_constraintStart_toEndOf="@+id/imageView"
                              app:layout_constraintTop_toTopOf="parent">

                              <TextView
                                        android:id="@+id/recyclerview_row_textview_datehour"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="01/01/2022 - 14h"
                                        android:textSize="16dp"
                                        android:textStyle="bold" />

...
